Can enter/exit rover; Spawn rover with R; Saves player/vehicle/terrain state between sessions; Mined tiles leave stuff behind.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <title>🚀💎</title>
     <script src="phaser.js"></script>
     <script src="terrain_generators.js"></script>
+    <script src="Debug.js"></script>
+    <script src="Controls.js"></script>
+    <script src="Interactions.js"></script>
+    <script src="Landfall_helper.js"></script>
+    <script src="Objects.js"></script>
+    <script src="Vehicles.js"></script>
     <script src="Boot.js"></script>
     <script src="Preload.js"></script>
     <script src="MainMenu.js"></script>
     <script src="Game.js"></script>
-    <script src="Landfall_helper.js"></script>
     <script src="Landfall.js"></script>
     <style>
       body {
@@ -18,8 +23,9 @@
       }
     </style>
   </head>
-  <body>
-
+  <body style="background-color: #222222;">
+    <div style="width: 18%; height: 100%; background-color: #222222; color: #333333; display: inline-block;">One day there will be stuff here.</div>
+    <div style="width: 78%; height: 100%; display: inline-block;" id="game-area"></div>
     <script src="main.js"></script>
   </body>
 </html>
